k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic-jdbc-mysql
spec:
  selector:
    matchLabels:
      app: spring-petclinic-jdbc-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-petclinic-jdbc-mysql
    spec:
      containers:
        - name: spring-petclinic-jdbc-mysql
          image: registry.cloud-garage.net/ages/spring-petclinic-jdbc-mysql
          ports:
            - containerPort: 8888
