k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: spring-petclinic-jdbc-mysql
  name: spring-petclinic-jdbc-mysql
spec:
  ports:
    - port: 8888
      targetPort: 8888
  selector:
    app: spring-petclinic-jdbc-mysql
  type: ClusterIP
