k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-petclinic-jdbc-mysql
spec:
  ingressClassName: contour
  rules:
  - host: petclinic.tap.kubeagesaz.com
    http:
      paths:
      - backend:
          service:
            name: spring-petclinic-jdbc-mysql
            port:
              number: 8888
        path: /
        pathType: Prefix
